[package]
name = "kv"
version = "0.1.0"
authors = ["natsunoyoru97"]
description = "A simple structured key-value server in Rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1" # networking buffer library
dashmap = "5.1.0" # cocurrent HashMap
http = "0.2.6" # HTTP status code
prost = "0.9.0" # protobuf library
thiserror = "1"
tracing = "0.1" # the simple log library

[dev-dependencies]
anyhow = "1"
async-prost = "0.3.0" # protobuf -> TCP frame
futures = "0.3"
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "io-util", "macros", "net" ] }
tracing-subscriber = "0.3.8"

[build-dependencies]
prost-build = "0.9.0" # Compile protobuf